# longlive-optimization

./: .gitignore  LAMBDA_QUICKSTART.md  MANIFEST.in  README_OPTIMIZATION.md  optimized_inference.py  pyproject.toml  requirements-demo.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  config.py  run_benchmark.py  runner.py  visualization.py
configs/: longlive_optimized.yaml
demo/: __init__.py  pipeline_wrapper.py  server.py
docs/: ADDITIONAL_OPTIMIZATIONS.md  LATENCY_ANALYSIS.md  THOUGHT_EXERCISE.md
pipeline/: causal_inference.py
scripts/: README.md  collect_quality_metrics.py  download_from_lambda.sh  generate_comparison_videos.py  lambda_provision_and_run.sh  monitor_lambda.py  poll_h100.sh  prompts.txt  run_full_benchmark.py  setup_h100.sh  terminate_lambda.sh
tests/: __init__.py  conftest.py  test_advanced_optimizations.py  test_benchmark_config.py  test_demo.py  test_profiler.py  test_quantization.py  test_runner.py  test_visualization.py
utils/: __init__.py  advanced_optimizations.py  comprehensive_metrics.py  gpu_workflow.py  job_callbacks.py  profiler.py  quantization.py
wan/modules/: causal_model.py
